fixing font weight and shifting gradient overlay

--- a/src/app.scss
+++ b/src/app.scss
@@ -27,6 +27,7 @@ a:hover {
 h1 {
   font-family: 'Gotham-Bold', sans-serif;
   font-size: 24px;
+  font-weight: 400;
   margin: 30px 0;
 }
 
